--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body{
+    font-family: Roboto;
+}
+h2{
+    font-family: Roboto Condensed;
+}
+h3{
+    font-family: Roboto Condensed;
+}
 .site-header{
     background-color: white;
 }
