--- a/style.css
+++ b/style.css
@@ -8,9 +8,17 @@ body{
 /* Navigation */
 .site-header{
     background-color: white;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.site-header-actions{
+    display: flex;
+    align-items: center;
 }
 .sitenav-list{
     list-style: none;
+    display: flex;
 }
 .sitenav-link{
     font-size: 13px;
@@ -34,6 +42,9 @@ body{
 .hero{
     background-color: #252420;
     color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .hero-content{
     width: 300px;
@@ -62,6 +73,11 @@ body{
     line-height: 1.2;
     letter-spacing: 0.5px;
 }
+.features-list{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+}
 .feature{
     width: 340px;
 }
@@ -79,6 +95,9 @@ body{
 .promo{
     background-color: #252420;
     color: #fff;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 .promo-content{
     width: 440px;
@@ -88,6 +107,7 @@ body{
     font-size: 40px;
     line-height: 48px;
 }
+
 .promo-highlight{
     color: #FF7500;
 }
@@ -101,13 +121,25 @@ body{
 .site-footer{
     background-color: #f8f8f8;
 }
+.site-footer-top{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .site-footer ul{
     list-style: none;
+}
+.site-footer-socials{
+    display: flex;
+    align-items: center;
 }
 .site-footer-divider{
     width: 1100px;
     height: 2px;
     background-color: rgba(37, 36, 32, 0.5);
+}
+.site-footer-bottom{
+    display: flex;
 }
 .site-footer-links{
     width: 224px;
