--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: 0.4s;
+}
+.site-logo:hover{
+    opacity: 0.8;
+}
+.site-logo:active{
+    opacity: 0.6;
 }
 .site-header-actions{
     display: flex;
@@ -30,12 +37,27 @@ body{
 .sitenav-link a{
     text-decoration: none;
     color: #000;
+    transition: color 0.4s;
+}
+.site-links a:hover{
+    color: #FF7500;
+}
+.site-links a:active{
+    color: #FF7500;
+    opacity: 0.6;
 }
 .main-link{
     font-size: 13px;
     line-height: 15px;
     background-color: #FF7500;
     color: #fff;
+    transition: 0.4s;
+}
+.main-link:hover{
+    opacity: 0.8;
+}
+.main-link:active{
+    opacity: 0.6;
 }
 
 /* Hero */
@@ -121,6 +143,13 @@ body{
 .site-footer{
     background-color: #f8f8f8;
 }
+.site-icon{
+    color: #252420;
+    transition: color 0.4s;
+}
+.site-icon:hover{
+    color: #FF7500;
+}
 .site-footer-top{
     display: flex;
     align-items: center;
@@ -132,6 +161,18 @@ body{
 .site-footer-socials{
     display: flex;
     align-items: center;
+}
+.site-footer-socials a{
+    color: #252420;
+    transition: color 0.4s;
+}
+.site-footer-socials a:hover{
+    color: #FF7500;
+    opacity: 0.8;
+}
+.site-footer-socials a:active{
+    color: #FF7500;
+    opacity: 0.6;
 }
 .site-footer-divider{
     width: 1100px;
@@ -150,25 +191,7 @@ body{
     text-decoration: none;
     color: #252420;
 }
-
-/* Hover */
-
-.site-logo:hover{
-    opacity: 0.8;
-}
-.site-links a:hover{
-    color: #FF7500;
-}
-.main-link:hover{
-    opacity: 0.8;
-}
 /* Opacity */
 .site-logo:active{
-    opacity: 0.6;
-}
-.site-link a:active{
-    opacity: 0.6;
-}
-.main-link:active{
     opacity: 0.6;
 }
