--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body{
 
 /* Navigation */
 .site-header{
+    padding: 16px 170px 16px 170px;
+    border-top: 5px solid #FF7500;
     background-color: white;
     display: flex;
     align-items: center;
@@ -28,6 +30,7 @@ body{
     display: flex;
 }
 .sitenav-link{
+    padding: 0;
     font-size: 13px;
     line-height: 15px;
     font-weight: 500;
@@ -47,6 +50,10 @@ body{
     opacity: 0.6;
 }
 .main-link{
+    display: inline-block;
+    padding: 12px 24px 12px 24px;
+    border-radius: 4px;
+    font-weight: bold;
     font-size: 13px;
     line-height: 15px;
     background-color: #FF7500;
@@ -62,6 +69,8 @@ body{
 
 /* Hero */
 .hero{
+    padding-top: 80px;
+    padding-bottom: 80px;
     background-color: #252420;
     color: #fff;
     display: flex;
@@ -74,6 +83,7 @@ body{
 .orange-line{
     width: 80px;
     height: 3px;
+    border: none;
     background-color:#FF7500 ;
 }
 .hero-heading{
@@ -85,9 +95,14 @@ body{
 .hero-img{
     width: 510px;
     height: 510px;
+    border-radius: 8px;
 }
 
 /* Feature */
+.features{
+    padding-top: 210px;
+    padding-bottom: 210px;
+}
 .features-heading{
     font-family: Roboto Condensed;
     width: 440px;
@@ -104,8 +119,12 @@ body{
     width: 340px;
 }
 .feature-icon-wrapper{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100px;
     height: 100px;
+    border-radius: 50%;
     background-color: rgba(255, 117, 0, 0.2);
 }
 .feature-title{
