--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@ body{
     line-height: 1.5;
     letter-spacing: 0.5px;
 }
+*:focus{
+    outline: 2px dotted #FF7500;
+    outline-offset: 5px;
+}
 
 /* Navigation */
 .site-header{
@@ -26,11 +30,11 @@ body{
     align-items: center;
 }
 .sitenav-list{
+    padding: 0;
     list-style: none;
     display: flex;
 }
 .sitenav-link{
-    padding: 0;
     font-size: 13px;
     line-height: 15px;
     font-weight: 500;
@@ -42,10 +46,10 @@ body{
     color: #000;
     transition: color 0.4s;
 }
-.site-links a:hover{
+.sitenav-link a:hover{
     color: #FF7500;
 }
-.site-links a:active{
+.sitenav-link a:active{
     color: #FF7500;
     opacity: 0.6;
 }
@@ -113,6 +117,7 @@ body{
 .features-list{
     display: flex;
     justify-content: space-between;
+    padding: 0;
     list-style: none;
 }
 .feature{
@@ -136,6 +141,7 @@ body{
 .promo{
     background-color: #252420;
     color: #fff;
+    border-radius: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -155,11 +161,14 @@ body{
 .promo-img{
     width: 440px;
     height: 440px;
+    border-radius: 12px;
     object-fit: cover;
 }
 
 /* Footer */
 .site-footer{
+    padding-top: 56px;
+    padding-bottom: 56px;
     background-color: #f8f8f8;
 }
 .site-icon{
@@ -176,6 +185,7 @@ body{
 }
 .site-footer ul{
     list-style: none;
+    padding: 0;
 }
 .site-footer-socials{
     display: flex;
@@ -184,6 +194,7 @@ body{
 .site-footer-socials a{
     color: #252420;
     transition: color 0.4s;
+    padding: 0;
 }
 .site-footer-socials a:hover{
     color: #FF7500;
@@ -196,6 +207,7 @@ body{
 .site-footer-divider{
     width: 1100px;
     height: 2px;
+    border: none;
     background-color: rgba(37, 36, 32, 0.5);
 }
 .site-footer-bottom{
@@ -210,7 +222,12 @@ body{
     text-decoration: none;
     color: #252420;
 }
-/* Opacity */
-.site-logo:active{
+.site-footer-lists a{
+    transition: 0.4s;
+}
+.site-footer-lists a:hover{
+    color: #FF7500;
+}
+.site-footer-lists a:active{
     opacity: 0.6;
 }
