--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,12 @@ body{
     justify-content: space-between;
     transition: 0.4s;
 }
+/* a{
+    display: block;
+}
+.site-logo{
+    display: block;
+} */
 .site-logo:hover{
     opacity: 0.8;
 }
@@ -32,6 +38,8 @@ body{
 .sitenav-list{
     padding: 0;
     list-style: none;
+    margin: 0;
+    margin-right: 32px;
     display: flex;
 }
 .sitenav-link{
@@ -41,15 +49,21 @@ body{
     letter-spacing: 1px;
     text-transform: uppercase;
 }
-.sitenav-link a{
+.sitenav-item{
+    margin-right: 32px;
+}
+.sitenav-item:last-child{
+    margin-right: 0;
+}
+.sitenav-link {
     text-decoration: none;
     color: #000;
     transition: color 0.4s;
 }
-.sitenav-link a:hover{
+.sitenav-link :hover{
     color: #FF7500;
 }
-.sitenav-link a:active{
+.sitenav-link :active{
     color: #FF7500;
     opacity: 0.6;
 }
@@ -88,13 +102,21 @@ body{
     width: 80px;
     height: 3px;
     border: none;
+    margin: 0;
+    margin-bottom: 40px;
     background-color:#FF7500 ;
 }
 .hero-heading{
     font-family: Roboto Condensed;
     font-size: 40px;
     line-height: 1.2;
+    margin-top: 0;
+    margin-bottom: 24px;
     letter-spacing: 0.5px;
+}
+.hero-text{
+    margin-top: 0;
+    margin-bottom: 32px;
 }
 .hero-img{
     width: 510px;
@@ -110,18 +132,24 @@ body{
 .features-heading{
     font-family: Roboto Condensed;
     width: 440px;
+    margin-top: 0;
+    margin-bottom: 72px;
     font-size: 72px;
     line-height: 1.2;
     letter-spacing: 0.5px;
 }
 .features-list{
     display: flex;
-    justify-content: space-between;
     padding: 0;
+    margin: 0;
     list-style: none;
 }
 .feature{
     width: 340px;
+    margin-right: 40px;
+}
+.feature:last-child{
+    margin-right: 0;
 }
 .feature-icon-wrapper{
     display: flex;
@@ -149,16 +177,19 @@ body{
 .promo-content{
     width: 440px;
 }
-.promo-text-div{
+.promo-info-wrapper{
     margin-bottom: 24px;
 }
 .promo-text{
+    margin-top: 0;
     margin-bottom: 12px;
 }
 .promo-text:last-child{
     margin-bottom: 0;
 }
 .promo-heading{
+    margin-top: 0;
+    margin-bottom: 24px;
     font-family: Roboto Condensed;
     font-size: 40px;
     line-height: 48px;
@@ -199,6 +230,13 @@ body{
 .site-footer-socials{
     display: flex;
     align-items: center;
+    margin: 0;
+}
+.site-footer-socials li{
+    margin-right: 16px;
+}
+.site-footer-socials li:last-child{
+    margin-right: 0;
 }
 .site-footer-socials a{
     color: #252420;
@@ -216,6 +254,8 @@ body{
 .site-footer-divider{
     width: 1100px;
     height: 2px;
+    margin-top: 40px;
+    margin-bottom: 64px;
     border: none;
     background-color: rgba(37, 36, 32, 0.5);
 }
@@ -224,6 +264,14 @@ body{
 }
 .site-footer-links{
     width: 224px;
+    padding: 0;
+    margin: 0;
+    margin-right: 68px;
+    list-style: none;
+    line-height: 19px;
+}
+.site-footer-links:last-child{
+    margin-right: 0;
 }
 .site-footer-links a{
     font-size: 16px;
