--- a/styles/style.css
+++ b/styles/style.css
@@ -239,6 +239,7 @@ body{
     margin-right: 0;
 }
 .site-footer-socials a{
+    display: block;
     color: #252420;
     transition: color 0.4s;
     padding: 0;
@@ -250,6 +251,9 @@ body{
 .site-footer-socials a:active{
     color: #FF7500;
     opacity: 0.6;
+}
+.site-footer-socials svg{
+    display: block;
 }
 .site-footer-divider{
     width: 1100px;
