--- a/styles/style.css
+++ b/styles/style.css
@@ -1,331 +1,88 @@
-body{
-    font-family: Roboto Arial, Helvetica, sans-serif;
+/* GLOBAL */
+:root{
+    --orange-color:#FF7500;
+    --dark-color:#252420;
+}
+html {
+    box-sizing: border-box;
+    height: 100%;
+    scroll-behavior: smooth;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    font-family: "Roboto" "Arial", sans-serif;
     font-size: 16px;
     line-height: 1.5;
-    letter-spacing: 0.5px;
-    margin: 0;
-}
-*:focus{
-    box-sizing: border-box;
-    outline: 2px dotted #FF7500;
-    outline-offset: 5px;
+    background-color: #fff;
+    color: #222;
 }
 
-/* Navigation */
-.site-header{
-    border-top: 5px solid #FF7500;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    transition: 0.4s;
+img {
+    max-width: 100%;
+    height: auto;
 }
-.site-logo{
-    margin-left: 170px;
+
+a {
+    text-decoration: none;
 }
-.site-logo:hover{
-    opacity: 0.8;
-}
-.site-logo:active{
-    opacity: 0.6;
-}
-.site-logo img{
-    display: block;
-}
-.site-header-actions{
-    display: flex;
-    align-items: center;
-    margin-right: 170px;
-}
-.sitenav-list{
-    padding: 0;
+
+ul {
     list-style: none;
-    margin: 0;
-    margin-right: 32px;
+}
+
+/* CONTAINER */
+.container {
+    width: 100%;
+    max-width: 1200px;
+    padding-left: 50px;
+    padding-right: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* MAIN-CONTENT */
+.main-content {
+    flex-grow: 1;
+}
+
+/* HEADER CONTENT */
+.header {
+    padding-top: 21px;
+    padding-bottom: 16px;
+    border-top: 5px solid var(--orange-color);
+}
+.header__container {
     display: flex;
 }
-.sitenav-link{
-    font-size: 13px;
-    line-height: 15px;
+.header__logo {
+    margin-right: auto;
+}
+.header__list {
+    display: flex;
+}
+.header__list-item:not(:last-child){
+    margin-right: 32px;
+}
+.header__nav-link{
     font-weight: 500;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-}
-.sitenav-item{
-    margin-right: 32px;
-}
-.sitenav-item:last-child{
-    margin-right: 0;
-}
-.sitenav-link {
-    text-decoration: none;
-    color: #000;
-    transition: color 0.4s;
-}
-.sitenav-link :hover{
-    color: #FF7500;
-}
-.sitenav-link :active{
-    color: #FF7500;
-    opacity: 0.6;
-}
-.main-link{
-    display: inline-block;
-    padding: 12px 24px 12px 24px;
-    border-radius: 4px;
-    font-weight: bold;
     font-size: 13px;
-    line-height: 15px;
-    background-color: #FF7500;
+    color: #000;
+}
+.button-link {
+    padding: 12px 24px;
     color: #fff;
-    transition: 0.4s;
-}
-.main-link:hover{
-    opacity: 0.8;
-}
-.main-link:active{
-    opacity: 0.6;
-}
-
-/* Hero */
-.hero{
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    background-color: #252420;
-    color: #fff;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-.hero-content{
-    width: 300px;
-    padding-left: 170px;
-}
-.orange-line{
-    width: 80px;
-    height: 3px;
-    border: none;
-    margin: 0;
-    margin-bottom: 40px;
-    background-color:#FF7500 ;
-}
-.hero-heading{
-    width: 339px;
-    height: 96px;
-    font-family: Roboto Condensed;
-    font-size: 40px;
-    line-height: 1.2;
-    margin-top: 0;
-    margin-bottom: 24px;
-    letter-spacing: 0.5px;
-}
-.hero-text{
-    width: 387px;
-    height: 96px;
-    margin-top: 0;
-    margin-bottom: 32px;
-}
-.hero-img{
-    width: 510px;
-    margin-right: 170px;
-    margin-top: 62px;
-    margin-bottom: -62px;
-    border-radius: 8px;
-    box-shadow: 24px 24px 0 0 #FF7500;
-}
-
-/* Feature */
-.features{
-    padding-top: 210px;
-    padding-bottom: 210px;
-    margin: 0;
-}
-.container{
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left:170px;
-}
-.features-heading{
-    font-family: Roboto Condensed;
-    width: 440px;
-    margin-top: 0;
-    margin-bottom: 72px;
-    font-size: 72px;
-    line-height: 1.2;
-    letter-spacing: 0.5px;
-}
-.features-list{
-    width: 1100px;
-    height: 245px;
-    display: flex;
-    padding: 0;
-    padding-right: 170px;
-    margin: 0;
-    list-style: none;
-}
-.feature{
-    width: 340px;
-    margin-right: 40px;
-}
-.feature:last-child{
-    margin-right: 0;
-}
-.feature-icon-wrapper{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background-color: rgba(255, 117, 0, 0.2);
-}
-.feature-title{
-    font-size: 24px;
-    line-height: 1.2;
-}
-
-/* Promo */
-.promo{
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    /* padding-left: 170px;
-    padding-right: 170px; */
-    background-color: #252420;
-    color: #fff;
-    border-radius: 12px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.promo-content{
-    width: 440px;
-    margin-left: 170px;
-}
-.promo-info-wrapper{
-    margin-bottom: 24px;
-}
-.promo-text{
-    margin-top: 0;
-    margin-bottom: 12px;
-}
-.promo-text:last-child{
-    margin-bottom: 0;
-}
-.promo-heading{
-    margin-top: 0;
-    margin-bottom: 24px;
-    font-family: Roboto Condensed;
-    font-size: 40px;
-    line-height: 48px;
-}
-
-.promo-highlight{
-    color: #FF7500;
-}
-.promo-img{
-    width: 440px;
-    height: 440px;
-    margin-right: 170px;
-    margin-top: -65px;
-    margin-bottom: 65px;
-    border-radius: 12px;
-    object-fit: cover;
-}
-
-/* Footer */
-.site-footer{
-    padding-top: 56px;
-    padding-bottom: 56px;
-    background-color: #f8f8f8;
-}
-.site-icon{
-    color: #252420;
-    transition: color 0.4s;
-}
-.site-icon:hover{
-    color: #FF7500;
-}
-.site-footer-top{
-    display: flex;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-    justify-content: space-between;
-}
-.site-footer ul{
-    list-style: none;
-    padding: 0;
-}
-.site-footer-socials{
-    display: flex;
-    margin-right: 170px;
-    align-items: center;
-}
-.site-footer-socials li{
-    margin-right: 16px;
-}
-.site-footer-socials li:last-child{
-    margin-right: 0;
-}
-.site-footer-socials a{
-    display: block;
-    color: #252420;
-    transition: color 0.4s;
-    padding: 0;
-}
-.site-footer-socials a:hover{
-    color: #FF7500;
-    opacity: 0.8;
-}
-.site-footer-socials a:active{
-    color: #FF7500;
-    opacity: 0.6;
-}
-.site-footer-socials svg{
-    display: block;
-}
-.site-footer-divider{
-    width: 1100px;
-    height: 2px;
-    margin-top: 40px;
-    margin-bottom: 64px;
-    border: none;
-    background-color: rgba(37, 36, 32, 0.5);
-}
-.site-footer-bottom{
-    display: flex;
-    width: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    padding-left: 170px;
-    padding-right: 170px;
-}
-.site-footer-links{
-    width: 224px;
-    padding: 0;
-    margin: 0;
-    margin-right: 68px;
-    list-style: none;
-    line-height: 19px;
-}
-.site-footer-links:last-child{
-    margin-right: 0;
-}
-.site-footer-links a{
-    font-size: 16px;
-    line-height: 19px;
-    text-decoration: none;
-    color: #252420;
-}
-.site-footer-lists a{
-    transition: 0.4s;
-}
-.site-footer-lists a:hover{
-    color: #FF7500;
-}
-.site-footer-lists a:active{
-    opacity: 0.6;
+    background-color: var(--orange-color);
+    border-radius:4px;
 }
