--- a/styles/style.css
+++ b/styles/style.css
@@ -149,21 +149,25 @@ ul {
     padding-top: 210px;
     padding-bottom: 210px;
 }
+
 .features__title {
     margin-top: 24px;
     font-weight: 700;
     font-size: 72px;
 }
+
 .features__list {
     display: flex;
     justify-content: space-between;
     margin: 0;
     padding: 0;
 }
+
 .feature__list-item {
     width: 340px;
     padding-right: 26px;
 }
+
 .feature__icon-wrapper {
     display: flex;
     justify-content: center;
@@ -174,6 +178,7 @@ ul {
     border-radius: 50%;
     background-color: rgba(255, 117, 0, 0.2);
 }
+
 .feature__title {
     margin-top: 0;
     margin-bottom: 12px;
@@ -181,6 +186,7 @@ ul {
     line-height: 1.2;
     font-family: var(--heading-font);
 }
+
 .feature__info {
     margin: 0;
 }
@@ -191,26 +197,31 @@ ul {
     padding-bottom: 160px;
     color: var(--white-color);
 }
+
 .promo__container {
     padding: 64px;
     background-color: var(--dark-color);
     border-radius: 12px;
     display: flex;
 }
+
 .promo__info-wrapper {
     margin-right: auto;
 }
+
 .promo__title {
     font-weight: 700;
     font-size: 40px;
     margin-bottom: 24px;
     padding: 0;
 }
+
 .promo__paragraph {
     padding: 0;
     margin-bottom: 12px;
 }
-.promo__link{
+
+.promo__link {
     display: block;
     width: 172px;
     margin-top: 24px;
@@ -220,9 +231,111 @@ ul {
     border-radius: 4px;
     font-weight: 700;
 }
+
 .promo__img {
     width: 440px;
     height: 440px;
     padding: 0;
     margin-top: -85px;
+}
+
+/* SITE-FOOTER */
+.site-footer {
+    padding-top: 56px;
+    padding-bottom: 56px;
+    background-color: #f8f8f8;
+}
+
+.site-footer__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.site-footer__logo-link {
+    margin-right: 36px;
+}
+
+.site-footer__list {
+    padding: 0;
+    list-style: none;
+}
+
+.socials {
+    display: flex;
+    align-items: center;
+    padding: 0;
+    margin: 0;
+}
+
+/* Img block */
+.socials__item {
+    margin-right: 16px;
+}
+
+.socials__item:last-child {
+    margin-right: 0;
+}
+
+.socials__link {
+    display: block;
+    color: #252420;
+}
+
+.socials__link:hover {
+    color: var(--accent-color);
+}
+
+.socials__link:active {
+    opacity: 0.6;
+}
+
+.socials__icon {
+    display: block;
+}
+
+.site-footer__divider {
+    height: 2px;
+    border: 0;
+    margin-top: 40px;
+    margin-bottom: 64px;
+    background-color: rgba(37, 36, 32, 0.5);
+}
+
+.site-footer__bottom {
+    display: flex;
+}
+
+.site-footer__links {
+    width: 224px;
+    padding: 0;
+    margin: 0;
+    margin-right: 68px;
+    list-style: none;
+    line-height: 19px;
+}
+
+.site-footer__links:last-child {
+    margin-right: 0;
+}
+
+.site-footer__links li {
+    margin-bottom: 16px;
+}
+
+.site-footer__links li:last-child {
+    margin-bottom: 0;
+}
+
+.site-footer__links a {
+    text-decoration: none;
+    color: #252420;
+}
+
+.site-footer__links a:hover {
+    color: var(--accent-color);
+}
+
+.site-footer__links a:active {
+    opacity: 0.6;
 }
