--- a/styles/style.css
+++ b/styles/style.css
@@ -57,10 +57,12 @@ ul {
 /* MAIN-CONTENT */
 .main-content {
     flex-grow: 1;
+    display: none;
 }
 
 /* HEADER CONTENT */
 .header {
+    display: none;
     padding-top: 21px;
     padding-bottom: 16px;
     border-top: 5px solid var(--orange-color);
@@ -281,15 +283,6 @@ ul {
     display: block;
     color: #252420;
 }
-
-.socials__link:hover {
-    color: var(--accent-color);
-}
-
-.socials__link:active {
-    opacity: 0.6;
-}
-
 .socials__icon {
     display: block;
 }
@@ -332,10 +325,73 @@ ul {
     color: #252420;
 }
 
-.site-footer__links a:hover {
-    color: var(--accent-color);
+/* RESPONSIVE */
+@media only screen and (max-width: 1140px){
+    .site-footer__links{
+        width: 20.36%;
+        margin-right: 6.18%;
+    }
 }
 
-.site-footer__links a:active {
-    opacity: 0.6;
+@media only screen and (max-width: 760px){
+    .site-footer__bottom{
+        flex-wrap: wrap;
+    }
+    .site-footer__links{
+        width: 30%;
+        margin-right: 5%;
+        margin-bottom: 36px;
+    }
+    .site-footer__links:last-child(){
+        margin-right: 5%;
+    }
+    .site-footer__links:nth-child(){
+        margin-right: 0;
+    }
+}
+@media only screen and (max-width: 600px){
+    .site-footer__links {
+        width: 46%;
+        margin-right: 8%;
+    }
+    
+    .site-footer__links:nth-child(3n) {
+        margin-right: 8%;
+    }
+    
+    .site-footer__links:nth-child(even) {
+        margin-right: 0;
+    }
+}
+@media only screen and (max-width:530px){
+    .site-footer {
+        padding-top: 36px;
+        padding-bottom: 36px;
+    }
+    
+    .site-footer__top {
+        flex-direction: column;
+    }
+    
+    .site-footer__logo-link {
+        margin-right: 0;
+        margin-bottom: 24px;
+    }
+}
+@media only screen and (max-width: 400px){
+    .site-footer{
+        text-align: center;
+    }
+    .site-footer__links {
+        width: 100%;
+        margin-right: 0;
+    }
+    
+    .site-footer__links:nth-child(3n) {
+        margin-right: 0;
+    }
+    
+    .site-footer__links:last-child {
+        margin-bottom: 0;
+    }
 }
