--- a/styles/style.css
+++ b/styles/style.css
@@ -57,12 +57,10 @@ ul {
 /* MAIN-CONTENT */
 .main-content {
     flex-grow: 1;
-    display: none;
 }
 
 /* HEADER CONTENT */
 .header {
-    display: none;
     padding-top: 21px;
     padding-bottom: 16px;
     border-top: 5px solid var(--orange-color);
@@ -139,6 +137,8 @@ ul {
 }
 
 .about__img {
+    width: 510px;
+    height: 510px;
     position: absolute;
     top: 40px;
     right: 0;
@@ -166,8 +166,9 @@ ul {
 }
 
 .feature__list-item {
+    border: 0;
     width: 340px;
-    padding-right: 26px;
+    padding-right: 40px;
 }
 
 .feature__icon-wrapper {
@@ -333,7 +334,22 @@ ul {
     }
 }
 
+@media only screen and (max-width: 1000px){
+    .features {
+        padding-top: 150px;
+        padding-bottom: 150px;
+    }
+}
+
 @media only screen and (max-width: 760px){
+    .features {
+        padding-top: 90px;
+        padding-bottom: 90px;
+    }
+    .features__title{
+        margin-bottom: 54px;
+        font-size: 54px;
+    }
     .site-footer__bottom{
         flex-wrap: wrap;
     }
@@ -349,6 +365,21 @@ ul {
         margin-right: 0;
     }
 }
+
+@media only screen and (max-width: 700px){
+    .features__list{
+        flex-wrap: wrap;
+    }
+    .feature__list-item{
+        width: 44%;
+        margin-right: 6%;
+        margin-bottom: 36px;
+    }
+    .features__list-item:nth-child(3n){
+        margin-right: 0;
+    }
+}
+
 @media only screen and (max-width: 600px){
     .site-footer__links {
         width: 46%;
@@ -364,6 +395,20 @@ ul {
     }
 }
 @media only screen and (max-width:530px){
+    .features__title{
+        text-align: center;
+        margin-bottom: 36px;
+        font-size: 44px;
+    }
+    .feature__list-item{
+        width: 100%;
+        margin-right: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        text-align: center;
+    }
     .site-footer {
         padding-top: 36px;
         padding-bottom: 36px;
