--- a/styles/style.css
+++ b/styles/style.css
@@ -68,16 +68,26 @@ ul {
 
 .header__container {
     display: flex;
+    align-items: center;
 }
 
 .header__logo {
     display: block;
     margin-right: auto;
 }
+.header__menu-toggler{
+    display: none;
+    width: 50px;
+    height: 50px;
+    padding: 0;
+    border: none;
+    background-color: transparent;
+}
 .header__actions{
     display: flex;
     align-items: center;
 }
+
 .header__list {
     display: flex;
     padding: 0;
@@ -381,14 +391,46 @@ ul {
 
 @media only screen and (max-width: 1000px){
     .header__container{
+        justify-content: space-between;
+    }
+    .header__menu-toggler{
+        display: block;
+    }
+    .header__actions{
+        display: none;
+        background-color: #333;
+        position: absolute;
+        top: 110px;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        padding: 10px;
         flex-direction: column;
-        align-items: center;
+        align-items: start;
+        z-index: 2;
+    }
+    .header__menu-opener{
+        display: flex;
+        color: var(--white-color);
     }
     .header__logo{
         margin-right: 0;
     }
     .header__navigator{
         margin-top: 12px;
+    }
+    .header__list{
+        flex-direction: column;
+    }
+    .header__list-item{
+        margin-bottom: 36px;
+    }
+    .header__nav-link{
+        font-size: 36px;
+        color: var(--white-color);
+    }
+    .button-link{
+        font-size: 16px;
     }
     .about__info-wrapper{
         flex-grow: 1;
@@ -572,6 +614,15 @@ ul {
     }
 }
 @media only screen and (max-width: 400px){
+    .header__logo{
+        margin-right: 20px;
+    }
+    .header__actions{
+        align-items: center;
+    }
+    .header__list{
+        align-items: center;
+    }
     .about__img {
         max-width: 100%;
         height: auto;
